Version 0.3
	Added new PdfDocument object - new high level object for reading & writing a PDF doc;
	Improved handling of the /Info dict for both reading and writing PDFs;
	Added new test app - podofopdfinfo, which will be used to dump metadata, etc. from a PDF;
	Added PdfError::DebugMessage() as the official way to write out debugging info;
		updated all other debugging msgs to use this;
	Added PdfError::DebugEnabled() to enable/disable display of debug messages;
	Added tracking of file size in PdfParser;
	Minor tweak to Linearization handling - to enable getting the status from a doc;
	Added getting GetPdfVersionAsString() to PdfWriter;
	Added new info/object getting methods to PdfDocument;
		bool IsLinearized();
		size_t FileSize();
		PdfObject* GetStructTreeRoot();
		PdfObject* GetMetadata();
		PdfObject* GetOutlines();
		PdfObject* GetAcroForm();
	Updated pdfinfo & podofopdfinfo to call the new PdfDocument methods;
	
Version 0.2
	Improved Documentation;
	Added SetInformation for additional error information to PdfError;
	Fixed the underline color of text;
	Introduced PdfReference class;
	Fixed PdfStream::GetFilteredCopy;
	Improved handling of DecodeParms for filters;
	Fixed PDF files with more than one DecodeParms dictionary in one
	object;
	Added on demand loading of objects to the PdfParser;
	Ported to windows by Leonard Rosenthol;
	On demand loading of objects is now the default;
	Refactored PdfFilter interface so that filters are cached;
	Fixed multiple connected XRef tables through /Prev keys in the trailer;
	Fixed a number of compiler warnings;
	Replaced char*'s with std::strings in a number of classes;
	Added std::ostream support to PdfOutputDevice;
	Improvements to the ImageExtractor tool;
	Refactored PdfVariant so that it is easier to use;

Version 0.1 (11 June 2006)
	Initial release;
	